--- a/index.html
+++ b/index.html
@@ -1,82 +1,169 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
-  <head>
-    <title>Cadastro De Clientes</title>
-    <style>
-      body {
-        Font-family: Arial, sans-serif;
-        Margin: 0;
-        Padding: 0;
-        Background-color: #f2f2f2;
-      }
-
-      h2 {
-        text-align: center;
-      }
-
-      form {
-        max-width: 400px;
-        margin: 20px auto;
-        Background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
-      }
-
-      label,
-      input {
-        display: block;
-        margin-bottom: 10px;
-      }
-
-      input[type="text"],
-      input[type="Email"],
-      input[type="tel"] {
-        width: 95%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-
-      input[type="submit"] {
-        width: 100%;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        Background-color: #007bff;
-        color: #fff;
-        cursor: pointer;
-      }
-
-      input[type="submit"]:hover {
-        Background-color: #0056b3;
-      }
-    </style>
-    <script type="text/javascript" src="./index.js" defer=""></script>
-    <link rel="stylesheet" href="./index.css">
-  </head>
-
-  <body>
-    <h2>Cadastro De Pessoas</h2>
-    <form>
-      <label>Nome:</label>
-      <input type="text" id="nome" name="nome" required="">
+<HTMl>
 
 
-      <label>Email:</label>
-      <input type="Email" id="Email" name="Email" required="">
+<head>
+  <title>Minha página pessoal</title>
+</head>
+<style>
+*{
+  margim: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  front-family: Arial, sans- serif;
+  background-color: #f4f4f4;
+  color: #333;
+  line-height: 1.6;
+  padding: 20px;
+}
+header{
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+}
+header h1{
+  margin-bottom: 10px;
+}
+nav ul{
+  list-style: none;
+}
+nav ul li{
+  display: inline;
+  margin: 0 10px;
+}
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+section{
+  margin: 20px 0;
+}
+section#sobre, 
+section#projetos,
+section#cadastro,
+section#contato{
+background-color: #fff;
+padding: 20px;
+border-box: 8px;
+box-shandow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+footer{
+text-align: center;
+margin-top: 20px;
+}
+h3{
+text-align: center;
+}
 
 
-      <label>Telefone:</label>
-      <input type="Tel" id="Telefone" name="Telefone" required="">
-      <input type="submit" value="cadastrar">
+form{
+max-width: 400px;
+margin: 20px auto;
+Background-color: #fff;
+padding: 20px;
+border-radius: 5px;
+box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+}
 
 
-    </form>
+label,
+input{
+display: block;
+margin-bottom: 10px;
+}
+
+
+input[type="text"],
+input[type="Email"],
+input[type="tel"] {
+width: 95%;
+padding: 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+}
+
+
+input[type="submit"]{
+width: 100%;
+padding: 10px;
+border: none;
+border-radius: 5px;
+Background-color: #007bff;
+color: #fff;
+cursor: pointer;
+}
+
+
+input[type="submit"]:hover{
+Background-color: #0056b3;
+}
 
 
 
-  </body>
 
-</html>
+</style>
+<body>
+  <header>
+    <h1>Bem vindo a página de Ana Júlia Ulrich</h1>
+    <nav>
+      <ul>
+        <li><a href="#sobre">Sobre mim</a></li>
+        <li><a href="#progetos">progetos</a></li>
+        <li><a href="#cadastro">cadastro</a></li>
+        <li><a href="#contato">contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section id="sobre">
+    <h2> Sobre mim </h2>
+    <p>fsdfbgehfksdkfgosdofdfosuguog5555</p>
+    <p>fsdfbgehfksdkfgosdofdfosuguog5555</p>
+    <p>fsdfbgehfksdkfgosdofdfosuguog5555</p>
+    <p>fsdfbgehfksdkfgosdofdfosuguog5555</p>
+    <p>fsdfbgehfksdkfgosdofdfosuguog5555</p>
+  </section>
+
+
+  <section id="projetos">
+    <h2> Projetos </h2>
+    <ul>
+      <li>Projetos 1: <a href="#">Descrição 1</a></li>
+      <li>Projetos 2: <a href="#">Descrição 2</a></li>
+    </ul>
+  </section>
+
+<section id="cadastro">
+<h3>Cadastro De Pessoas</h3>
+<form>
+<label>Nome:</label>
+<input type="text" id="nome" name="nome" required>
+
+
+<label>Email:</label>
+<input type="Email" id="Email" name="Email" required>
+
+
+<label>Telefone:</label>
+<input type="Tel" id="Telefone" name="Telefone" required>
+<input type="submit" value="cadastrar">
+
+
+</form>
+
+</section>
+
+  <section id="contato">
+    <h2> contato </h2>
+    <p>Entre em contato comigo via <a
+        href="mailto:ana_ulrich@estudante.sesisenai.org.br">ana_ulrich@estudante.sesisenai.org.br</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 - Ana Júlia Ulrich</p>
+  </footer>
+</body>
+
+</HTMl> 
