--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <HTMl>
 
 
+
+
 <head>
   <title>Minha página pessoal</title>
 </head>
+
+
 <style>
 *{
   margim: 0;
@@ -41,7 +45,7 @@ nav ul li a {
 section{
   margin: 20px 0;
 }
-section#sobre, 
+section#sobre,
 section#projetos,
 section#cadastro,
 section#contato{
@@ -59,6 +63,12 @@ text-align: center;
 }
 
 
+
+
+
+
+
+
 form{
 max-width: 400px;
 margin: 20px auto;
@@ -69,11 +79,23 @@ box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
 }
 
 
+
+
+
+
+
+
 label,
 input{
 display: block;
 margin-bottom: 10px;
 }
+
+
+
+
+
+
 
 
 input[type="text"],
@@ -86,6 +108,12 @@ border-radius: 5px;
 }
 
 
+
+
+
+
+
+
 input[type="submit"]{
 width: 100%;
 padding: 10px;
@@ -95,6 +123,12 @@ Background-color: #007bff;
 color: #fff;
 cursor: pointer;
 }
+
+
+
+
+
+
 
 
 input[type="submit"]:hover{
@@ -111,7 +145,7 @@ Background-color: #0056b3;
     <nav>
       <ul>
         <li><a href="#sobre">Sobre mim</a></li>
-        <li><a href="#progetos">progetos</a></li>
+        <li><a href="#projetos">projetos</a></li>
         <li><a href="#cadastro">cadastro</a></li>
         <li><a href="#contato">contato</a></li>
       </ul>
@@ -127,13 +161,18 @@ Background-color: #0056b3;
   </section>
 
 
+
+
   <section id="projetos">
-    <h2> Projetos </h2>
+    <h2>Projetos</h2>
     <ul>
       <li>Projetos 1: <a href="#">Descrição 1</a></li>
       <li>Projetos 2: <a href="#">Descrição 2</a></li>
     </ul>
   </section>
+
+
+
 
 <section id="cadastro">
 <h3>Cadastro De Pessoas</h3>
@@ -142,8 +181,12 @@ Background-color: #0056b3;
 <input type="text" id="nome" name="nome" required>
 
 
+
+
 <label>Email:</label>
 <input type="Email" id="Email" name="Email" required>
+
+
 
 
 <label>Telefone:</label>
@@ -151,9 +194,17 @@ Background-color: #0056b3;
 <input type="submit" value="cadastrar">
 
 
+
+
 </form>
 
+
+
+
 </section>
+
+
+
 
   <section id="contato">
     <h2> contato </h2>
@@ -161,9 +212,16 @@ Background-color: #0056b3;
         href="mailto:ana_ulrich@estudante.sesisenai.org.br">ana_ulrich@estudante.sesisenai.org.br</a></p>
   </section>
 
+
+
+
   <footer>
     <p>&copy; 2024 - Ana Júlia Ulrich</p>
   </footer>
 </body>
 
-</HTMl> 
+
+
+
+</HTMl>
+
